k8s/egress/service-entry.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name:  random-dog-service-entry
spec:
  hosts:
    - dog.ceo
  ports:
    - number: 80
      name: tls
      protocol: TLS
  resolution: DNS
